--- a/projects/202008-Defcon-28.md
+++ b/projects/202008-Defcon-28.md
@@ -25,18 +25,17 @@ Use this section for important links for projects/events that visitors will need
 
 ## Milestones
 
-* [ ] In an unordered list (billeted) list major milestones in chronological order
-* [ ] Use the syntax of 2019-01-19, Milestone name, [Name of Owner]
-* [x] When milestones are completed, mark them with an "x"
-* [ ] A milestone isn't everyone’s to-do list, it is the high level tasks of the project
-* [ ] If you have more than 20 milestones, you’re being too granular
-* [ ] 2020-01-01, New Year's Eve Holiday, [All]
-* [ ] 2020-07-04, Independence Day (US) Holiday, [All]
+- [ ] In an unordered list (billeted) list major milestones in chronological order
+- [ ] Use the syntax of 2019-01-19, Milestone name, [Name of Owner]
+- [x] When milestones are completed, mark them with an "x"
+- [ ] A milestone isn't everyone’s to-do list, it is the high level tasks of the project
+- [ ] If you have more than 30 milestones, you’re being too granular
+- [x] 2019-09-22, Action item completed, [All]
+- [x] 2019-09-30, You can leave the box UNCHECKED if not completed but you must edit page to change state, [All]
 
 ## Leadership
 
-* unordered list of each leader and a hyperlink to their email address.
-* [Mike McCamon](mailto:mike.mccamon@owasp.com?subject=An%20Interesting%20Email)
+* [Lisa Jones](mailto:lisa.jones@owasp.com?subject=DEFCON%20Project)
 
 ## Budget
 
