--- a/operating-plan/2020.md
+++ b/operating-plan/2020.md
@@ -56,12 +56,10 @@ The Foundation will continue trademark registration efforts the following marks 
 
 <a name="kpi"></a>
 ### KPI Dashboard
-
 A set of Key Performance Indicators (KPIs) will be monthly published in a publicly accessible format, that measure the Foundation’s performance against goals. Minimally these metrics will include financials, SLA on workflows, membership, event, project, and chapter metrics.
 
 <a name="committee2"></a>
 ### Committee 2.0
-
 Support formation and participate in chartered Committees.
 
 <a name="community"></a>
@@ -73,7 +71,6 @@ The Foundation should revisit a modernization and vision-casting on how we can b
 
 <a name="chapter-operations"></a>
 ### Chapter Operations
-
 Following a refresh of Chapter and Chapter Leader Guidelines, the Foundation will require Leaders to accept an online agreement annually. The Foundation will provide online services like Meetup for Chapters to schedule and manage their Chapter meetings. Semi-annually staff will audit chapter activity to ensure chapter leaders are being good ambassadors of the Foundation in their local community. Per the December 2018 Board Resolution, the Foundation will rework chapter funding toward a Central Fund model for all chapters instead of maintaining local chapter balances. Local chapters will be encouraged to directly solicit sponsors for supporting their chapter meetings.
 
 <a name="individual-membership"></a>
@@ -107,7 +104,6 @@ Following a refresh of Project Leader Guidelines, the Foundation will require Le
 ### Project Nurishment
 It is important to the livelihood of the organization, that Projects get the resources and attention they need to be successful. No less than once per quarter, the Foundation shall proactively solicit feedback and requests for resources from each Project. That information shall be provided to the Board for action where appropriate. The Foundation will seek new ways to “highlight” Project work in our marketing, on social, and highly featured projects on our website. 
 
-
 <a name="projoect-summits"></a>
 ### Project Summits
 Minimally twice each year, with one each in different geographies, the Foundation will host a three-day working sessions for selected projects. A merit-based selection process will be developed to invite projects to each summit. The program will solely include heads-down work time for OWASP projects. Travel assistance will be provided to selected projects and their key leaders.
@@ -140,13 +136,14 @@ Once selected, a branding system will be defined for a variety of executions inc
 
 <a name="web2"></a>
 ### Website 2.0
+Following the December 2019 launch of our new website, the Foundation will monitor and enhance the user experience with feedback membership, visitors, and experts. There will be a deliberate effort to harmonize the design of successful Projects and the main website. An annual content calendar will be developed for spotlights, features, and weekly blog posts. An events registration system will be developed to migrate from third parties for those services. Finally, an static archive of the Foundation wiki will be hosted through 2020 for historical purposes.
+
 <a name="corporate-sponsorship"></a>
 ### Corporate Sponsorship
 Following the success of this new product in 2019, the Development team will continue to source new and larger corporate sponsorship packages to fund the operations of the Foundation. A list of 50 target companies will be defined and our goal will be to close no less than ten of these accounts to multi-year agreements. The Foundation will also explore retooling event sponsorships looking to define multi-event or annual agreements to grow the size of our exhibitions and reward our larger corporate sponsors. 
 
 <a name="global-partnerships"></a>
 ### Global Partnerships
-
 Working together with partners in the technology and infosec community is a shortcut to increased visibility and reputation of the Foundation. Our 2020 Global Partnerships will minimally include Blackhat and DEFCON. Generally, the Foundation will not directly promote third party events or activities to our membership. Additionally the Foundation will explore comarketing opportunities with organizations like Github, Mozilla, Google, Microsoft, Apple, and other global InfoSec companies, seeking no fewer than two engagements prior in 2021.
 
 <a name="marketing-plan"></a>
@@ -159,6 +156,7 @@ No later than 2H2020, the Foundation will launch a Corporate Grant Funding effor
 
 <a name="20-anniversary"></a>
 ### 20th Year Anniversary Celebration
+September 2020 will mark the begining of the OWASP Foudation's 20th year. Before June 1, a plan will be developed with details for a 24 month celebration that recognizes the historical contributions of long-time members, whlie also recruiting new members and supporters into our ecosystem.
 
 <a name="online-training"></a>
 ### Online Training and Certificate Program
@@ -167,5 +165,3 @@ A potential new revenue source for the Foundation could be online training. In t
 <a name="underserved"></a>
 ### Underserved Communities
 In all of the Foundation’s work, we shall strive to be inclusive of underserved communities like students, women in technology, and those living in developing economies. Our membership and event registration pricing should always include accommodations for these communities. Additionally a plan shall be developed to increase participation by 25% in each of these communities in the work of the Foundation.
-
-
