--- a/operating-plan/2020.md
+++ b/operating-plan/2020.md
@@ -46,7 +46,7 @@ To protect the financial assets of the Foundation, a set of documented treasury 
 ### Expense Policies
 Provided budget limitations, the Foundation will generally follow a “fair and reasonable” expense policy. Chapters and projects will be provided guidelines at the beginning of every calendar year for their planning. Expenses that are expected to exceed $1,500 must be pre-approved and expenses greater than $5,000 must be direct billed to the Foundation and do not qualify for reimbursement. The Foundation will continue to use JIRA to process reimbursement with a documented SLA of no more than 22 days for fully documented requests.
 
-<a name="travel-assistanc”
+<a name="travel-assistance"></a>
 ### Travel Assistance Budget
 The Foundation will establish a budget and process for reimbursable travel expenses on behalf of the Foundation. A strong preference will be to use this program for our Project Summits and opportunities where members present our work at major third party conferences. All travel, other than staff and Board travel to Board meetings, will use this process for any travel reimbursement requests.
 
