--- a/operating-plan/2020.md
+++ b/operating-plan/2020.md
@@ -102,7 +102,7 @@ Properly launch this year’s Top 10 with a sustained and deliberate marketing e
 Following a refresh of Project Leader Guidelines, the Foundation will require Leaders to accept an online agreement annually. The Foundation will provide online services like Github hosting for project repositories. Semi-annually staff will audit project activity to ensure project leaders are successfully moving their work along as expected. Projects can be promoted or demoted based on their work product and activity. Project funding will migrate from a project balance design toward a single fund.
 
 <a name="project-nurishment"></a>
-### Project Nurishment
+### Project Nourishment
 It is important to the livelihood of the organization, that Projects get the resources and attention they need to be successful. No less than once per quarter, the Foundation shall proactively solicit feedback and requests for resources from each Project. That information shall be provided to the Board for action where appropriate. The Foundation will seek new ways to “highlight” Project work in our marketing, on social, and highly featured projects on our website. 
 
 <a name="projoect-summits"></a>
