--- a/operating-plan/2020.md
+++ b/operating-plan/2020.md
@@ -5,7 +5,7 @@ layout: col-sidebar
 
 ---
 ## OWASP 2020 Operating Plan
-Draft #2
+Draft #3 for Board Review
 
 **Vision: Global and open resource for software security**
 
@@ -137,7 +137,7 @@ Once selected, a branding system will be defined for a variety of executions inc
 
 <a name="web2"></a>
 ### Website 2.0
-Following the December 2019 launch of our new website, the Foundation will monitor and enhance the user experience with feedback membership, visitors, and experts. There will be a deliberate effort to harmonize the design of successful Projects and the main website. An annual content calendar will be developed for spotlights, features, and weekly blog posts. An events registration system will be developed to migrate from third parties for those services. Finally, an static archive of the Foundation wiki will be hosted through 2020 for historical purposes.
+Following the December 2019 launch of our new website, the Foundation will monitor and enhance the user experience with feedback membership, visitors, and experts. There will be a deliberate effort to harmonize the design of successful Projects and the main website. An annual content calendar will be developed for spotlights, features, and weekly blog posts. An event registration system will be developed to migrate from third parties for those services. Finally, a static archive of the Foundation wiki will be hosted through 2020 for historical purposes.
 
 <a name="corporate-sponsorship"></a>
 ### Corporate Sponsorship
@@ -157,7 +157,7 @@ No later than 2H2020, the Foundation will launch a Corporate Grant Funding effor
 
 <a name="20-anniversary"></a>
 ### 20th Year Anniversary Celebration
-September 2020 will mark the begining of the OWASP Foudation's 20th year. Before June 1, a plan will be developed with details for a 24 month celebration that recognizes the historical contributions of long-time members, whlie also recruiting new members and supporters into our ecosystem.
+September 2020 will mark the beginning of the OWASP Foundation's 20th year. Before June 1, a plan will be developed with details for a 24 month celebration that recognizes the historical contributions of long-time members, whlie also recruiting new members and supporters into our ecosystem.
 
 <a name="online-training"></a>
 ### Online Training and Certificate Program
