--- a/operating-plan/2020.md
+++ b/operating-plan/2020.md
@@ -107,7 +107,7 @@ It is important to the livelihood of the organization, that Projects get the res
 
 <a name="projoect-summits"></a>
 ### Project Summits
-Minimally twice each year, with one each in different geographies, the Foundation will host a three-day working sessions for selected projects. A merit-based selection process will be developed to invite projects to each summit. The program will solely include heads-down work time for OWASP projects. Travel assistance will be provided to selected projects and their key leaders.
+Minimally twice each year, with one each in different geographies, the Foundation will host a three-day working sessions for selected projects. A merit-based selection process will be developed to invite projects to each summit. The program will solely include heads-down work time for OWASP projects. Travel assistance will be provided to selected projects and their key leaders/contributors.
 
 <a name="events"></a>
 ## Events
