--- a/operating-plan/2020.md
+++ b/operating-plan/2020.md
@@ -90,6 +90,10 @@ The Foundation will establish processes that enable local chapters to manage loc
 ### Community Outreach
 Staff and leadership shall always be responsive and respectful of our member and nonmember communities. Our interactions should always encourage deeper commitment and engagement in our mission. Annually the Foundation will conduct, and then publish the results, of a Membership Survey focused on their perspectives and use of Foundation tools and projects. The Foundation will explore ways to more closely engage the Board and staff with the Top 20 chapters and projects. When possible, the Foundation will host member-only lounges and feedback sessions at Global AppSec and AppSec Days events.
 
+<a name="town-hall"></a>
+### Town Halls
+No less than quarterly, OWASP will organize a call-in commuity Town Hall. The agenda for these meetings will include community-submitted, Board, and staff topics. While a good deal of the content will be "presentation" style, there will opportuities for community feedback and volunteering.
+
 <a name="projects"></a>
 ## Projects
 
