--- a/budget/2020.md
+++ b/budget/2020.md
@@ -92,3 +92,34 @@ Expenses
 ```
 
 [Comparison to FY19 forecasted actuals](/www-staff/budget/2020-compare)
+
+### Charity Spending Guidelines
+
+Generally, it is best practice for non-profits to spend at least 80% of their funding on "Programs" - with the goal of getting to 85% or better. Given our modest revenue target compared to larger non-profits, ~84% is admirable. Our mission includes promoting the goal of secure software, hosting and nurturing open source security projects, local chapters and advocacy, along with learning and educational conferences.
+
+<div id="piechart"></div>
+
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
+<script type="text/javascript">
+// Load google charts
+google.charts.load('current', {'packages':['corechart']});
+google.charts.setOnLoadCallback(drawChart);
+
+// Draw the chart and set the chart values
+function drawChart() {
+  var data = google.visualization.arrayToDataTable([
+  ['Task', 'Distribution of Spending'],
+  ['Programs', 83.4],
+  ['Fundraising', 5.6],
+  ['Management/General', 10.8],
+]);
+
+  // Optional; add a title and set the width and height of the chart
+  var options = {'title':'My Average Day', 'width':550, 'height':400};
+
+  // Display the chart inside the <div> element with id="piechart"
+  var chart = new google.visualization.PieChart(document.getElementById('piechart'));
+  chart.draw(data, options);
+}
+</script>
