--- a/budget/2020.md
+++ b/budget/2020.md
@@ -91,7 +91,6 @@ Expenses
             P/L                                     ($10,651)                 
 ```
 
-[Comparison to FY19 forecasted actuals](/www-staff/budget/2020-compare)
 
 ### Charity Spending Guidelines
 
@@ -116,10 +115,12 @@ function drawChart() {
 ]);
 
   // Optional; add a title and set the width and height of the chart
-  var options = {'title':'My Average Day', 'width':550, 'height':400};
+  var options = {'title':'My Average Day', 'width':650, 'height':400};
 
   // Display the chart inside the <div> element with id="piechart"
   var chart = new google.visualization.PieChart(document.getElementById('piechart'));
   chart.draw(data, options);
 }
 </script>
+
+Below is detailed budget. If you are curious there is also a [Comparison to FY19 forecasted actuals](/www-staff/budget/2020-compare) for your information. (Sorry I am reworking that webpage to make it more readable.
