--- a/budget/2020.md
+++ b/budget/2020.md
@@ -15,7 +15,7 @@ There is also a [Comparison to FY19 forecasted actuals](/www-staff/budget/2020-c
 
 Generally, it is best practice for non-profits to spend at least 80% of their funding on "Programs" - with the goal of getting to 85% or better. **The FY20 budget forecasts the OWASP Foundation will spend 83.6% of its funds on Programming.** Given our modest revenue target compared to larger non-profits, this is a great accomplishment and directly reflects the alignment of our OPerating Plan and Budget to our mission which includes promoting techniques and the importance of secure software, hosting and nurturing open source security projects, local chapters and advocacy, along with learning and educational gatherings.
 
-<div id="piechart" style="position:absolute;right:10px;top:0px;width: 400px; height: 550px;"></div>
+<div id="piechart"></div>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
 <script type="text/javascript">
@@ -33,14 +33,14 @@ function drawChart() {
 ]);
 
   // Optional; add a title and set the width and height of the chart
-  var options = {'title':'My Average Day', 'width':650, 'height':400};
+  var options = {'title':'My Average Day', 'width':550, 'height':400};
 
   // Display the chart inside the <div> element with id="piechart"
   var chart = new google.visualization.PieChart(document.getElementById('piechart'));
   chart.draw(data, options);
 }
 </script>
-</div>
+
 
 ```
 DRAFT as of 2019-Dec-13
