--- a/budget/2020.md
+++ b/budget/2020.md
@@ -9,7 +9,7 @@ layout: full-width
 
 Below please find the 2020 Draft budget. We are forecasting a breakeven (net-zero) plan with about 50% growth in Revenue and Expenses. As in historical years, the success of Global Events drive the topline performance for the foundation. With the return to SF and Dublin, along with a full-time Events staff, we believe there is growth in FY20 in this category of the budget compared to FY19. These events not only fufull our mission of education and community, they often give Corporate Supportors additional incentive to financially support the OWASP Foundation.
 
-There is also a [Comparison to FY19 forecasted actuals](/www-staff/budget/2020-compare) for your information. (Sorry I am reworking that webpage to make it more readable.
+There is also a [Comparison to FY19 forecasted actuals](/www-staff/budget/2020-compare) for your information. 
 
 ### Charity Spending Guidelines
 
