--- a/budget/2020.md
+++ b/budget/2020.md
@@ -84,8 +84,8 @@ Income
 Expenses                                                    
    Conferences                                              
       Global AppSec                                         
-         Dublin                                   $1,400,000
-         San Francisco                              $590,000
+         Dublin                                     $590,000
+         San Francisco                            $1,400,000
       Global AppSec Training                                
          Dublin                                      $95,000
          San Francisco                              $225,000
@@ -128,4 +128,33 @@ Expenses
             P/L                                     ($10,651)                 
 ```
 
+### Global AppSec Dublin 
+Needs to be audited
 
+```
+Income                                            
+     Registrations                        €292,075
+     Training                             €170,000
+     Sponsorships                         €450,000
+     Total Income                         €912,075
+                                                  
+Expenses                                          
+     Catering                                     
+          Conference                      €138,373
+          Training                         €11,061
+          Social Events                   €141,072
+     Expo                                  €20,020
+     Meeting Room Rental                  €165,000
+     Trainer Fees                          €68,000
+     A/V                                   €16,500
+     Printing & Branding                   €16,869
+     Accommodation                         €17,615
+     Travel                                €20,200
+     Internet                              €27,500
+     Hard Goods                             €6,463
+     Marketing                             €20,000
+     Staff Services                       €100,000
+     Total Expenses                       €768,672
+                                                  
+     P/L                                  €143,403
+```
