--- a/budget/2020.md
+++ b/budget/2020.md
@@ -127,6 +127,36 @@ Expenses
             Total Expenses                        $4,523,669
             P/L                                     $307,863
 ```
+### Global AppSec San Francisco
+Needs to be audited
+
+```
+Income                                            
+     Registrations                        $602,000
+     Training                             $382,500
+     Sponsorships                         $725,000
+     Total Income                       $1,709,500
+                                                  
+Expenses                                          
+     Catering                                     
+          Conference                      $205,228
+          Training                         $64,896
+          Social Events                   $171,143
+     Expo                                  $20,730
+     Meeting Room Rental                          
+     Trainer Fees                         $153,000
+     A/V                                   $86,600
+     Printing & Branding                   $16,600
+     Accommodation                         $22,966
+     Travel                                $19,400
+     Internet                              $32,475
+     Hard Goods                             $6,901
+     Marketing                             $25,000
+     Staff Services                       $100,000
+     Total Expenses                       $924,939
+                                                  
+     P/L                                  $784,561
+```
 
 ### Global AppSec Dublin 
 Needs to be audited
