--- a/budget/2020.md
+++ b/budget/2020.md
@@ -84,8 +84,8 @@ Income
 Expenses                                                    
    Conferences                                              
       Global AppSec                                         
-         Dublin                                     $765,467
-         San Francisco                              $707,034
+         Dublin                                     $665,467
+         San Francisco                              $607,034
       Global AppSec Training                                
          Dublin                                      $80,071
          San Francisco                              $217,896
@@ -93,17 +93,17 @@ Expenses
       Regional Events                                       
          AppSec California                          $310,000
          AppSec Days AU                             $125,000
-         LASCON                                       $0,001
+         LASCON                                     $120,000
          Local Events                               $200,000
-   Projects                                          $25,000
+   Projects                                          $50,000
    Chapter Expenses                                 $250,000
    Marketing                                                
          Local Partnerships                          $25,000
-         Global Partnerships                         $20,000
-         Online                                      $15,000
+         Global Partnerships                         $40,000
+         Online                                      $25,000
          Branding & Trademarks                       $25,000
          Event Promotions                            $50,000
-         Public Relations                            $25,000
+         Public Relations                            $50,000
    Travel                                                   
          Board F2F Meetings (2x/yr)                  $50,000
          Projects Summit Travel Assistance          $150,000
@@ -124,9 +124,10 @@ Expenses
    Other G&A                                         $60,000
    Software/Internet/Hosting                         $10,000
    Bad Debt                                          $10,000
-            Total Expenses                        $4,523,669
-            P/L                                     $307,863
+            Total Expenses                        $4,523,668
+            P/L                                     $307,864
 ```
+
 ### Global AppSec San Francisco
 Needs to be audited
 
@@ -188,3 +189,4 @@ Expenses
                                                   
      P/L                                  €143,403
 ```
+* Please note, Global AppSec events include at Staff Services charge back that when rolling up to the Foundadtional budget is already accounted for in Staffing Expenses.
