--- a/budget/2020.md
+++ b/budget/2020.md
@@ -5,15 +5,15 @@ layout: full-width
 
 ---
 
-### OWASP 2020 DRAFT Budget
+## OWASP 2020 DRAFT Budget
 
 Below please find the 2020 Draft budget. We are forecasting a net-profit plan with about 50% growth in Revenue and Expenses. As in historical years, the success of Global Events drive the topline performance for the foundation. With the return to SF and Dublin, along with a full-time Events staff, we believe there is growth in FY20 in this category of the budget compared to FY19. These events not only fufull our mission of education and community, they often give Corporate Supportors additional incentive to financially support the OWASP Foundation.
 
 There is also a [Comparison to FY19 forecasted actuals](/www-staff/budget/2020-compare) for your information. 
 
-### Charity Spending Guidelines
+## Charity Spending Guidelines
 
-Generally, it is best practice for non-profits to spend at least 80% of their funding on "Programs" - with the goal of getting to 85% or better. **The FY20 budget forecasts the OWASP Foundation will spend 81.6% of its funds on Programming.** Given our modest revenue target compared to larger non-profits, this is a great accomplishment and directly reflects the alignment of our Operating Plan and Budget to our mission which includes promoting techniques and the importance of secure software, hosting and nurturing open source security projects, local chapters and advocacy, along with learning and educational gatherings.
+Generally, it is best practice for non-profits to spend at least 80% of their funding on "Programs" - with the goal of getting to 85% or better. **The FY20 budget forecasts the OWASP Foundation will spend 83.6% of its funds on Programming.** Given our modest revenue target compared to larger non-profits, this is a great accomplishment and directly reflects the alignment of our Operating Plan and Budget to our mission which includes promoting techniques and the importance of secure software, hosting and nurturing open source security projects, local chapters and advocacy, along with learning and educational gatherings.
 
 <div id="piechart"></div>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
@@ -27,9 +27,9 @@ google.charts.setOnLoadCallback(drawChart);
 function drawChart() {
   var data = google.visualization.arrayToDataTable([
   ['Task', 'Distribution of Spending'],
-  ['Programs', 81.6],
-  ['Fundraising', 6.4],
-  ['Management/General', 11.9],
+  ['Programs', 83.6],
+  ['Fundraising', 6.6],
+  ['Management/General', 9.8],
 ]);
 
   // Optional; add a title and set the width and height of the chart
