--- a/budget/2020.md
+++ b/budget/2020.md
@@ -128,8 +128,7 @@ Expenses
             P/L                                     $307,864
 ```
 
-### Global AppSec San Francisco
-Needs to be audited
+### Global AppSec San Francisco Budgeted P/L
 
 ```
 Income                                            
@@ -159,7 +158,7 @@ Expenses
      P/L                                  $784,561
 ```
 
-### Global AppSec Dublin 
+### Global AppSec Dublin Budgeted P/L
 Needs to be audited
 
 ```
