--- a/budget/2020.md
+++ b/budget/2020.md
@@ -159,7 +159,6 @@ Expenses
 ```
 
 ### Global AppSec Dublin Budgeted P/L
-Needs to be audited
 
 ```
 Income                                            
@@ -188,7 +187,7 @@ Expenses
                                                   
      P/L                                  €143,403
 ```
-* Please note, Global AppSec events include at Staff Services charge back that when rolling up to the Foundadtional budget is already accounted for in Staffing Expenses.
+Please note, Global AppSec events include at Staff Services charge back that when rolling up to the Foundadtional budget is already accounted for in Staffing Expenses.
 
 ### Accrual-based Monthly Budget
 ```
